--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,23 @@
 {
+    "version": 2,
     "builds": [
       {
         "src": "jobportal/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles_build"
+        }
       }
     ],
     "routes": [
       {
         "src": "/static/(.*)",
-        "dest": "/staticfiles/$1",
-        "headers": {
-          "cache-control": "s-maxage=31536000, immutable"
-        }
+        "dest": "/static/$1"
       },
       {
         "src": "/(.*)",
@@ -20,5 +25,6 @@
       }
     ]
   }
+  
   
   
